--- a/main.html
+++ b/main.html
@@ -8,6 +8,41 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container" id="start">
+		<h1>TIC TAC TOE</h1>
+		<div class="p1">
+			<label for="p1">Player 1</label>
+			<input type="search" id="player1" placeholder="enter name">
+		</div>
+		<div class="p2">
+			<label for="p2">Player 2</label>
+			<input type="search" id="player2" placeholder="enter name">
+		</div>
+		<button id="btn" onclick="move()">Start Game</button>
+	</div>
+	<div id="gamePage" style="display:none;">
+		<h1>TIC TAC TOE</h1>
+		<div class="message">
+		</div>
+		<div class="board">
+			<table>
+				<tr>
+					<td id="1"></td>
+					<td id="2"></td>
+					<td id="3"></td>
+				</tr>
+				<tr>
+					<td id="4"></td>
+					<td id="5"></td>
+					<td id="6"></td>
+				</tr>
+				<tr>
+					<td id="7"></td>
+					<td id="8"></td>
+					<td id="9"></td>
+				</tr>
+			</table>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
